# oxideav-gltf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
fuzz/src/: lib.rs
src/: accessor.rs  asset_source.rs  decoder.rs  encoder.rs  error.rs  glb.rs  json_model.rs  json_to_scene.rs  lib.rs  meshopt.rs  object_model.rs  quantization.rs  scene_to_json.rs  splatting.rs  validation.rs
tests/: accessor_alignment.rs  accessor_bounds.rs  accessor_property_validation.rs  accessor_type_enum.rs  animation_input_times.rs  asset_source_buffer_view.rs  attribute_set_indices.rs  attribute_unsigned_int.rs  buffer_fit_validation.rs  buffer_uri_mediatype.rs  bufferview_data_kind.rs  bufferview_target.rs  camera_round_trip.rs  camera_type_enum.rs  camera_validation.rs  extension_and_fuzz_validation.rs  extras_preservation.rs  glb_bin_length.rs  glb_roundtrip.rs  json_roundtrip.rs  khr_animation_pointer.rs  khr_draco_mesh_compression.rs  khr_gaussian_splatting.rs  khr_lights_punctual.rs  khr_lights_punctual_validation.rs  khr_materials_anisotropy.rs  khr_materials_clearcoat.rs  khr_materials_diffuse_transmission.rs  khr_materials_dispersion.rs  khr_materials_emissive_strength.rs  khr_materials_ior.rs  khr_materials_iridescence.rs  khr_materials_sheen.rs  khr_materials_specular.rs  khr_materials_transmission.rs  khr_materials_unlit.rs  khr_materials_variants.rs  khr_materials_volume.rs  khr_mesh_quantization.rs  khr_meshopt_compression.rs  (+32 more)
